# recipe-finder

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.lint.yaml  docker-compose.yaml  pyproject.toml
api/: Dockerfile  mypy.ini  pyproject.toml
api-data/: config.json  trained_kmeans_20_20221023-222054.pkl  trained_kmeans_2_20221023-221709.pkl
api/src/: api.py
notebooks/: Data Cleaning.ipynb  Demo Flask.ipynb  KMeans-Copy1.ipynb  Matching Ingredients.ipynb  Naive KMeans.ipynb  pyspark exploration.ipynb
preprocessing/: Dockerfile  README.md  lint.sh  pyproject.toml
preprocessing/notebooks/: Ingredient Search API.ipynb  KMeans-Copy1.ipynb
preprocessing/src/: hello_world.py  main.py
preprocessing/test/: test_hello_world.py
recipe-app/: Dockerfile  package.json
recipe-app/src/: App.css  App.tsx  index.css
src/: api.py  main.py
web/: Dockerfile  README.md
web/recipe-app/: package-lock.json  package.json
web/recipe-app/src/: App.tsx
