[tool.poetry]
name = "recipe-finder"
version = "0.1.0"
description = "Tool to find recipes given ingredients"
authors = ["smonaco47 <sarah.tech.47@gmail.com>"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.6.0"
flask = "^2.2.2"
flask-cors = "^3.0.10"
pandas = "^1.5.0"
scikit-learn = "^1.1.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
black = "^22.8.0"
mypy = "^0.971"
isort = "^5.10.1"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
